fix animation gap + add speed controller

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,17 @@
 body{
   background-color: #000;
 }
+.game-bg{
+  position: relative;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  color: #fff;
+}
 
 #canvas1{
-  position: absolute;
   border: 3px solid #fff;
   width: 800px;
   height: 700px;
-  transform: translate(-50%,-50%);
-  top: 50%;
-  left: 50%;
 }
